# rules_ts_proto

./: BUILD.bazel  MODULE.bazel  go.mod  go.sum  package.json
docs/: rules.md
e2e/typescript_proto_usage/: BUILD.bazel  MODULE.bazel  package-lock.json  package.json  pnpm-lock.yaml
e2e/typescript_proto_usage/location/: BUILD.bazel
e2e/typescript_proto_usage/polyline/: BUILD.bazel
e2e/typescript_proto_usage/tests/extending_jasmine/: BUILD.bazel
patches/: aspect_rules_js.patch
ts_proto/: BUILD.bazel  workspace_deps.bzl
ts_proto/private/: BUILD.bazel  ts_proto_library.bzl
