###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "rules_ts_proto",
    version = "0.1.0",
    compatibility_level = 0,
)

bazel_dep(name = "toolchains_protoc", version = "0.5.0")
bazel_dep(name = "protobuf", version = "29.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# This needs to be updated to avoid needing the incompatible_disallow_ctx_resolve_tools
bazel_dep(name = "rules_proto_grpc", version = "5.0.1")
bazel_dep(name = "gonzojive_protobuf_javascript", version = "3.21.5.esm", repo_name = "com_google_protobuf_javascript")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_go", version = "0.48.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3", repo_name = "aspect_bazel_lib")
bazel_dep(name = "aspect_rules_js", version = "2.0.0")
bazel_dep(name = "aspect_rules_ts", version = "3.1.0")
bazel_dep(name = "grpc-java", version = "1.64.0")
bazel_dep(name = "grpc-web", version = "0.0.0", repo_name = "com_github_grpc_grpc_web")

# This doesn't support newer version of rules_proto_grpc due to breaking CPP code change from using strings to using string views
git_override(
    module_name = "grpc-web",
    commit = "d0ecc7635b5e148bbc85ac2d345b1783d700249e",  # v2.0.0
    remote = "https://github.com/grpc/grpc-web.git",
)

bazel_dep(name = "aspect_rules_swc", version = "2.5.0")
bazel_dep(name = "gazelle", version = "0.36.0", repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1")
bazel_dep(name = "stardoc", version = "0.7.1")
bazel_dep(name = "rules_nodejs", version = "6.2.0")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")

config_repository = use_extension("//ts_proto:workspace_deps.bzl", "config_repository")
config_repository.config(
    name = "com_github_gonzojive_rules_ts_proto_config",
    dep_targets = {
        "grpc-web": "//:node_modules/grpc-web",
        "google-protobuf": "//:node_modules/google-protobuf",
        "@types/google-protobuf": "//:node_modules/@types/google-protobuf",
    },
)
use_repo(config_repository, "com_github_gonzojive_rules_ts_proto_config")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "rules_ts_proto_npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "rules_ts_proto_npm")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_glog",
    "com_github_golang_protobuf",
    "org_golang_google_protobuf",
)
